# league-skinset-finder

./: .gitattributes  Cargo.toml  build.rs  index.html
assets/: champ-lanes-table.html  official-sets-table.html  wiki-sets-table.html
src/: components.rs  constants.rs  lanes.rs  main.rs  model.rs  players.rs  skinsets.rs
src/components/: app.rs  button.rs  checkbox.rs  link.rs  player.rs  results_table.rs  skinset_list.rs
src/components/player/: champ.rs  champ_dropdown.rs  lanes_select.rs  name_field.rs  remove_player.rs
